--- a/angular-wishlist/package.json
+++ b/angular-wishlist/package.json
@@ -25,6 +25,8 @@
     "@ngx-translate/core": "^13.0.0",
     "bootstrap": "^4.5.3",
     "dexie": "^3.0.2",
+    "mapbox-gl": "^0.49.0",
+    "ngx-mapbox-gl": "^4.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -33,9 +35,10 @@
     "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mapbox-gl": "^0.49.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
