--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+version: 2
+jobs: 
+  build:
+    working_directory: ~/myapp/angular-wishlist
+    docker:
+      - image: circleci/node:8-browsers
+    steps:
+      - checkout:
+          path: ~/myapp
+      - restore_cache: 
+          key: angular-wishlist-{{ .Branch }}-{{ checksum "package.lock.json" }} 
+      - run: npm install
+      -save_cache: 
+          key: angular-wishlist-{{ .Branch }}-{{ checksum "package.lock.json" }} 
+          path:
+            - "node_modules"
+      - run: npm run test -- --progress=false -- watch=false --browsers=ChromeHeadlessCI
